--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,21 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react", 
+        "react-hooks"
     ],
     "rules": {
+        "react/prop-types": 0,
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "jsx-a11y/label-has-associated-control": [ "error", {
+            "required": {
+              "some": [ "nesting", "id"  ]
+            }
+          }],
+          "jsx-a11y/label-has-for": [ "error", {
+            "required": {
+              "some": [ "nesting", "id"  ]
+            }
+          }]
     }
 }
