--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gear-js/api": "^0.1.1",
     "@polkadot/api": "^5.6.1",
     "@polkadot/extension-dapp": "^0.39.3",
     "@polkadot/react-identicon": "^0.85.1",
