--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "shelljs": "^0.8.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
