--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gear-app"
+name = "guestbook"
 version = "0.1.0"
 authors = ["Gear Technologies"]
 edition = "2018"
@@ -9,6 +9,6 @@ license = "GPL-3.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear", features = ["debug"] }
+gstd = { git = "https://github.com/gear-tech/gear", features = ["debug", "meta"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
