--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -12,6 +12,8 @@ crate-type = ["cdylib"]
 gstd = { git = "https://github.com/gear-tech/gear", features = ["debug"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
+primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
+
 
 [profile.release]
 lto = true
