--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gear-js/api": "file:/Users/eugeneway/work/gear-js/api/api",
+    "@gear-js/api": "^0.9.6",
     "@polkadot/api": "^6.7.2",
     "@polkadot/extension-dapp": "^0.42.2",
     "@polkadot/react-identicon": "^0.87.5",
@@ -14,10 +14,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "crypto-browserify": "^3.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "shelljs": "^0.8.4",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -52,5 +54,9 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "react-app-rewired": "^2.1.8"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   }
 }
