--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.9",
     "crypto-browserify": "^3.12.0",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "shelljs": "^0.8.4",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-alert": "^5.2.1",
     "buffer": "^6.0.3",
     "react-app-rewired": "^2.1.8"
   },
