--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gear-js/api": "^0.9.7",
-    "@polkadot/api": "^6.7.2",
-    "@polkadot/extension-dapp": "^0.42.2",
-    "@polkadot/react-identicon": "^0.87.5",
+    "@gear-js/api": "^0.10.0",
+    "@polkadot/api": "^7.4.1",
+    "@polkadot/extension-dapp": "^0.42.6",
+    "@polkadot/react-identicon": "^0.87.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,8 +18,9 @@
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-scripts": "5.0.0",
-    "shelljs": "^0.8.4",
+    "shelljs": "^0.8.5",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -28,7 +29,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "build:contract": "node contract/buildwasm.ts",
-    "build:types": "node contract/parseTypes.ts",
+    "build:types": "node contract/parseTypes.js",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
