--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "build:contract": "node contract/buildwasm.ts",
+    "build:contract": "node contract/buildwasm.js",
     "build:types": "node contract/parseTypes.js",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
@@ -55,8 +55,10 @@
   },
   "devDependencies": {
     "@types/react-alert": "^5.2.1",
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "buffer": "^6.0.3",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "wasm-loader": "^1.3.0"
   },
   "browser": {
     "crypto": false,
