add sass to devDependencies

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "buffer": "^6.0.3",
     "react-app-rewired": "^2.1.8",
-    "wasm-loader": "^1.3.0"
+    "wasm-loader": "^1.3.0",
+    "sass": "^1.34.0"
   },
   "browser": {
     "crypto": false,
