--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
     "@types/react-alert": "^5.2.1",
     "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "buffer": "^6.0.3",
+    "eslint-config-react-app": "^7.0.0",
     "react-app-rewired": "^2.1.8",
-    "wasm-loader": "^1.3.0",
-    "sass": "^1.34.0"
+    "sass": "^1.34.0",
+    "wasm-loader": "^1.3.0"
   },
   "browser": {
     "crypto": false,
