--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -2,13 +2,8 @@
 name = "guestbook"
 version = "0.1.0"
 authors = ["Gear Technologies"]
-edition = "2018"
+edition = "2021"
 license = "GPL-3.0"
-
-resolver = "2"
-
-[lib]
-crate-type = ["cdylib"]
 
 [dependencies]
 gstd = { git = "https://github.com/gear-tech/gear", features = ["debug"] }
@@ -16,10 +11,8 @@ scale-info = { version = "2.1.2", default-features = false, features = ["derive"
 codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
 primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}
 
-
-[profile.release]
-lto = true
-opt-level = 's'
-
 [dev-dependencies]
 gtest = { git = "https://github.com/gear-tech/gear.git"}
+
+[build-dependencies]
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
